# MazeGame

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.bat  video.txt
include/: Core.hpp  MazeGame.h
include/AppContext/: AppContext.hpp
include/Application/: Application.cpp  Application.hpp  IApplication.hpp
include/Arena/: Arena.hpp
include/AssetsLoader/: AssetsLoader.hpp
include/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  Sound.cpp  Sound.hpp
include/CRC32_64/: CRC32_64.cpp  CRC32_64.hpp
include/CircularBuffer/: CircularBuffer.hpp
include/DoubleBuffer/: DoubleBuffer.hpp
include/Event/: Event.hpp
include/GameMechanics/: GameMenu.hpp  GameWL.hpp  GameplayData.hpp  GameplayState.cpp  GameplayState.hpp  MainMenu.hpp  MazeData.hpp  PathFinding.hpp  PauseMenu.hpp  SaveLoad.hpp  SettingsMenu.hpp
include/GameplayData/: GameplayData.hpp
include/IO/: IO.cpp  IO.hpp
include/InputEvent/: InputEvent.hpp
include/Processor/: Processor.cpp  Processor.hpp
include/RenderData/: RenderData.hpp
include/SaveFile/: SaveFileSpecs.hpp  SaveLoad.hpp  SaveManager.cpp  SaveManager.hpp
include/SaveFileSpecs/: SaveFileSpecs.hpp
include/Shape/: Maze.cpp  Maze.hpp  Rect.cpp  Shape.hpp  UI.hpp
include/State/: State.cpp  State.hpp
include/Utils/: Utils.hpp
include/ViewportScale/: ViewportScale.hpp
include/Window/: Window.cpp  Window.hpp
libs/gl2d/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
libs/stb_truetype/: CMakeLists.txt
resources/maps/: map1.txt  map2.txt  map3.txt
src/: Application.cpp  AssetsLoader.cpp  IO.cpp  MazeGame.cpp  Processor.cpp  Window.cpp
